charts/public/vault/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vault-vs
  namespace: vault
spec:
  hosts:
  - "vault.demo.kietvo.vn"
  gateways:
  - istio-ingress/istio-ingressgateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: vault.vault.svc.cluster.local
        port:
          number: 8200
